<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BikeSniffer</string>
    <string name="title_section1">Location</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example"></string>
    <string name="action_settings">Settings</string>
    <string name="my_location_activity">My location</string>
	<string name="map_options">Map display mode</string>
	<string name="map_option1">Terrain</string>
	<string name="map_option2">Satellite</string>
	<string name="send">Send</string>
	<string name="cancel">Cancel</string>
	<string name="radius_intro">Radius to search bikers</string>
	<string name="choose_radius">Choose radius</string>
	<string-array name="radius_array">
        <item>5 km</item>
        <item>10 km</item>
        <item>20 km</item>
        <item>30 km</item>
        <item>50 km</item>
        <item>>100 km</item>
    </string-array>
    <string name="expiration_intro">Meetings lifetime</string>
	<string name="choose_expiration">Choose radius</string>
	<string-array name="expiration_array">
        <item>10 min</item>
        <item>20 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>
</resources>
